--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve -o",
-    "build": "ng build",
+    "start": "node dist/app-book-fr/server/server.js",
+    "dev": "ng serve -o",
+    "build": "ng build --configuration production",
+    "build:server": "tsc src/server.ts --outDir dist/app-book-fr/server --module esnext --target es2022 --moduleResolution bundler --esModuleInterop",
+    "postbuild": "npm run build:server",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -19,6 +22,7 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -28,7 +32,9 @@
     "@angular/cli": "^19.2.4",
     "@angular/compiler-cli": "^19.2.0",
     "@tailwindcss/postcss": "^4.1.6",
+    "@types/express": "^4.17.21",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^20.10.0",
     "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
