--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "app-book-fr",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "ng": "ng",
     "start": "node dist/app-book-fr/server/server.js",
